labs/ingress-lab-03/manifests/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: controller-demo-service
  namespace: ingress-controller-lab
spec:
  selector:
    app: controller-demo
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
